fix: update artifact path in CI/CD workflow from .next to out

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
       with:
         name: github-pages
-        path: .next
+        path: out
         retention-days: 1
 
   deploy:
