--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "npx prettier --write ."
   },
   "dependencies": {
     "@types/d3": "^7.4.3",
@@ -42,6 +43,7 @@
     "eslint-plugin-unicorn": "^58.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "3.5.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
