--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-test:
     permissions:
-      contents: write
+      contents: read
     runs-on: ubuntu-latest
 
     steps:
