--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "^19.2.4",
     "zustand": "^5.0.11"
   },
+  "overrides": {
+    "eslint": "$eslint"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
