--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^10.0.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -36,6 +37,7 @@
     "@vitejs/plugin-react": "^5.1.3",
     "@vitest/browser": "^4.0.18",
     "@vitest/browser-playwright": "^4.0.10",
+    "@vitest/eslint-plugin": "^1.6.7",
     "@vitest/ui": "^4.0.10",
     "eslint": "^10",
     "eslint-config-next": "16.1.6",
@@ -45,7 +47,6 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-unicorn": "^62.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
     "playwright": "^1.58.2",
     "prettier": "3.8.1",
     "tailwindcss": "^4",
